--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="hero-content">
             <h1>Benvenuti nella Vostra Casa da Sogno in Sardegna</h1>
             <p>Godetevi una vacanza indimenticabile nella splendida isola di Sardegna.</p>
-            <button onclick="scrollToSection('about')">Scopri di più</button>
+            <button data-target="about">Scopri di più</button>
         </div>
     </section>
 
